# gemini-fullstack-langgraph-quickstart

backend/: app.py  configuration.py  graph copy.py  graph.ipynb  graph.py  main.html  prompts.py  pyproject.toml  state.py  test.ipynb  tools_and_schemas.py  utils.py
