[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.3.1",
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.116.1",
    "google-search-results>=2.4.2",
    "ipykernel>=6.29.5",
    "ipython>=9.4.0",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.28",
    "langchain-tavily>=0.2.10",
    "langgraph>=0.5.3",
    "openai>=1.97.0",
    "rich>=14.0.0",
    "uvicorn>=0.35.0",
]
